fix: layout issues

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,4 @@
 .card {
-  margin: 1rem;
-  /*flex-basis: 45%;*/
   padding: 1.5rem;
   text-align: left;
   color: inherit;
